# ScienceAgent

./: README.md  environment.yml  pyproject.toml  requirements.txt  summary.txt
src/scienceagent/examples/: simple_pdf_summary.py
summaries/: 1.json  2.json
